<resources>
    <string name="app_name">Vocabulary Tester</string>
    <string name="title_activity_manage_units">Manage units</string>
    <string name="saveButtonText">Save</string>
    <string name="name">Name</string>
    <string name="english_phrase">English Phrase</string>
    <string name="czech_phrase">Czech Phrase</string>
    <string name="start">Start</string>
    <string name="czech_to_english">Czech to English</string>
    <string name="english_to_czech">English to Czech</string>
    <string name="checkAnswer">Check Answer</string>
    <string name="answer">Answer</string>
    <string name="english">English</string>
    <string name="czech">Czech</string>
    <string name="next">Next</string>
    <string name="correctAnswer">Correct answer: %1$s</string>
    <string name="restart">Restart</string>
    <string name="select_unit">Select Unit</string>
    <string name="main_menu">Main Menu</string>
    <string name="import_from_file">import from file</string>
    <string name="phrases_imported">Imported %1$d phrases.</string>
    <string name="import_failed">Import failed.</string>
    <string name="wrong_answers">Wrong answers</string>
    <string name="edit_unit">Edit unit</string>
</resources>
